# envguidelines-py

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_basic_metadata.py  02_calculate_single_parameter.py  03_batch_calculations.py  04_soil_calculations.py  05_advanced_workflow.py  README.md
guidelinely/: __init__.py  _version.py  auth.py  cache.py  client.py  exceptions.py  models.py
tests/: test_analytics.py  test_auth.py  test_cache.py  test_client.py  test_edge_cases.py  test_exceptions.py  test_metadata_errors.py  test_models.py  test_search_guidelines.py  test_validation.py
