[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guidelinely"
dynamic = ["version"]
description = "Python client for the Guidelinely Environmental Guidelines API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Michael Davison", email = "michael.davison@gmail.com"}
]
keywords = ["environmental", "guidelines", "api", "water quality", "soil", "sediment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "diskcache>=5.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-httpx>=0.30.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/mpdavison/envguidelines-py"
Documentation = "https://guidelinely.1681248.com/docs"
Repository = "https://github.com/mpdavison/envguidelines-py"
"Bug Tracker" = "https://github.com/mpdavison/envguidelines-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["guidelinely*"]

[tool.setuptools.package-data]
guidelinely = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["guidelinely"]
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    ".venv/*",
    "venv/*",
    "*/__init__.py",
    "*/__pycache__/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
